# syn-m4-hw09

./: LICENSE  README.md  Taskfile.yml  compose.yaml  pyproject.toml
dev/: Dockerfile
src/core/: settings.py  urls.py
src/landing/: urls.py  views.py
src/static/css/: styles.css
src/templates/: base.html  contacts.html  index.html  portfolio.html
